--- a/package.json
+++ b/package.json
@@ -5,45 +5,48 @@
   "description": "Sails React Boilerplate",
   "keywords": [],
   "dependencies": {
-    "react": "~0.13.1",
+    "bcrypt": "~0.8.0",
+    "colorbrewer": "0.0.2",
+    "crossfilter": "~1.3.11",
+    "d3": "~3.5.3",
+    "ejs": "~0.8.4",
+    "events": "~1.0.2",
+    "flux": "~2.0.1",
+    "googleapis": "~1.1.0",
+    "grunt": "0.4.2",
+    "grunt-browserify": "~3.2.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-es6-module-transpiler": "~0.6.0",
+    "grunt-react": "~0.10.0",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "keymaster": "~1.6.2",
+    "keymirror": "~0.1.1",
+    "leaflet": "~0.7.3",
+    "nvd3": "~1.1.15-beta2",
+    "object-assign": "~2.0.0",
+    "rc": "~0.3.3",
+    "react": "~0.13.1",
+    "react-dropzone": "^1.2.0",
+    "react-router": "~0.13.1",
+    "reactify": "~0.17.1",
+    "request": "~2.51.0",
+    "requirejs": "~2.1.15",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "rc": "~0.3.3",
-    "include-all": "~0.1.3",
-    "ejs": "~0.8.4",
-    "grunt": "0.4.2",
-    "grunt-sync": "~0.0.4",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-react": "~0.10.0",
-    "requirejs": "~2.1.15",
-    "grunt-browserify": "~3.2.1",
-    "reactify": "~0.17.1",
-    "flux": "~2.0.1",
-    "events": "~1.0.2",
-    "keymaster": "~1.6.2",
-    "react-router": "~0.13.1",
-    "bcrypt": "~0.8.0",
-    "object-assign": "~2.0.0",
-    "request": "~2.51.0",
-    "keymirror": "~0.1.1",
-    "topojson": "~1.6.18",
-    "leaflet": "~0.7.3",
-    "d3": "~3.5.3",
     "sails-postgresql": "~0.10.11",
-    "googleapis": "~1.1.0",
-    "crossfilter": "~1.3.11",
-    "nvd3": "~1.1.15-beta2",
-    "colorbrewer": "0.0.2"
+    "superagent": "^1.2.0",
+    "topojson": "~1.6.18",
+    "tree-kill": "^0.1.1"
   },
   "scripts": {
     "start": "node app.js",
