--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Sails React Boilerplate",
   "keywords": [],
   "dependencies": {
+    "babel-core": "^5.7.2",
+    "babel-loader": "^5.3.2",
     "bcrypt": "~0.8.0",
     "colorbrewer": "0.0.2",
     "crossfilter": "~1.3.11",
@@ -25,10 +27,13 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-es6-module-transpiler": "~0.6.0",
+    "grunt-exec": "^0.4.6",
     "grunt-react": "~0.10.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "jsx": "^0.9.89",
+    "jsx-loader": "^0.13.2",
     "keymaster": "~1.6.2",
     "keymirror": "~0.1.1",
     "leaflet": "~0.7.3",
@@ -38,7 +43,7 @@
     "react": "~0.13.1",
     "react-dropzone": "^1.2.0",
     "react-router": "~0.13.1",
-    "reactify": "~0.17.1",
+    "reactify": "^0.17.1",
     "request": "~2.51.0",
     "requirejs": "~2.1.15",
     "sails": "~0.10.5",
@@ -46,7 +51,15 @@
     "sails-postgresql": "~0.10.11",
     "superagent": "^1.2.0",
     "topojson": "~1.6.18",
-    "tree-kill": "^0.1.1"
+    "tree-kill": "^0.1.1",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
+  },
+  "devDependencies": {
+    "grunt-exec": "^0.4.6",
+    "node-libs-browser": "^0.5.2",
+    "react-hot-loader": "^1.2.8",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
     "start": "node app.js",
