--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-core": "^5.7.2",
     "babel-loader": "^5.3.2",
     "bcrypt": "~0.8.0",
+    "bcryptjs": "^2.3.0",
     "colorbrewer": "0.0.2",
     "crossfilter": "~1.3.11",
     "d3": "~3.5.3",
