--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "colorbrewer": "0.0.2",
     "crossfilter": "~1.3.11",
     "d3": "~3.5.3",
+    "deep-equal": "^1.0.1",
     "ejs": "~0.8.4",
     "events": "~1.0.2",
     "flux": "~2.0.1",
