--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "json2csv": "^3.0.1",
     "jsx": "^0.9.89",
     "jsx-loader": "^0.13.2",
     "keymaster": "~1.6.2",
