--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "babel-core": "^5.7.2",
     "babel-loader": "^5.3.2",
-    "bcrypt": "~0.8.0",
     "bcryptjs": "^2.3.0",
     "colorbrewer": "0.0.2",
     "crossfilter": "~1.3.11",
@@ -43,9 +42,10 @@
     "nvd3": "~1.1.15-beta2",
     "object-assign": "~2.0.0",
     "rc": "~0.3.3",
-    "react": "~0.13.1",
+    "react": "~0.13.3",
     "react-dropzone": "^1.2.0",
-    "react-router": "~0.13.1",
+    "react-router": "~0.13.3",
+    "react-sparklines": "^1.4.0",
     "reactify": "^0.17.1",
     "request": "~2.51.0",
     "requirejs": "~2.1.15",
