--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sails-disk": "~0.10.0",
     "sails-postgresql": "~0.10.11",
     "save-svg-as-png": "^1.0.1",
+    "socket.io": "^1.3.7",
     "superagent": "^1.2.0",
     "topojson": "~1.6.18",
     "tree-kill": "^0.1.1",
