--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-es6-module-transpiler": "~0.6.0",
-    "grunt-exec": "^0.4.6",
     "grunt-react": "~0.10.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
@@ -45,7 +44,7 @@
     "react": "~0.13.3",
     "react-dropzone": "^1.2.0",
     "react-router": "~0.13.3",
-    "react-sparklines": "^1.4.0",
+    "react-select": "^0.6.12",
     "reactify": "^0.17.1",
     "request": "~2.51.0",
     "requirejs": "~2.1.15",
@@ -57,8 +56,7 @@
     "superagent": "^1.2.0",
     "topojson": "~1.6.18",
     "tree-kill": "^0.1.1",
-    "webpack": "^1.10.5",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "^1.10.5"
   },
   "devDependencies": {
     "grunt-exec": "^0.4.6",
